[project]
name = "recommender-algorithm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
